// -----------------------------------------------------------------------------
UCDetector 0.12.0 from 2008.:
New features:
 - [ 2163715 ] eclipse update site
 - [ 2290711 ] Detect write only fields
 - [ 2180705 ] Look for just the class name without the package name

Bugfixes:
 - Fix Bug [ 2153699 ] Find unused interface methods, unused abstract methods
 - Fix Bug [ 2269486 ] Constants in Interfaces Can't be Private
 - Fix BUG [ 2225016 ] Don't create "0 references marker" for overridden methods

// -----------------------------------------------------------------------------
UCDetector 0.11.0 from 2008.09.30:
New features:
 - QuickFixes
 - Checkbox "Ignore bean methods"
 - When UCDetector is running, now it is possible to continue editing files in eclipse
 - Speed up detection for overridden methods
 - Feature request [ 2103460 ]: Split visibility detection in private and protected.
 - Add warning message, if there are no elements found to run detection [ 2103655 ]

Bugfixes:
 - Don't suggest to change visibility of enums constants
 - Fix Bug [ 2103382 ] Method filter not saved in preference page
 - Fix Bug [ 2103678 ] Unnecessary code doesn't recurse in sub packages
 - Fix Bug [ 2103655 ] Detect cycles does not show anything
 - Fix Bug [ 2123103 ] Don't suggest to make constructors final

// -----------------------------------------------------------------------------
UCDetector 0.10.0 from 2008-09-04:
New features:
 - Filter for methods and fields
 - Final detection for methods and fields
 - Search of full qualifies class name in text files
 - Create html and xml report
 - Marker for default visibility
 - Different icons for private, protected, default and public
 - Tooltips in preference page
 - Show help for OutOfMemoryError'
Bugfixes:
 - Don't try to make normal classes private
 - Different icons for private, protected, default and public
 - Ignore serialization methods and fields like: serialVersionUID