@@ -83,11 +83,12 @@ SearchManager_Constructor=Constructor
 SearchManager_Field=Field
 SearchManager_Constant=Constant
 SearchManager_Method=Method
-# Change visibility of "AnalyzePlugin" to private
-SearchManager_MarkerVisibility=Change visibility of "{0}" to {1}
-# Use "final" for method "myMethod"()
-SearchManager_MarkerFinalMethod=Use "final" for method "{0}" - apply carefully!
-SearchManager_MarkerFinalField=Use "final" for field "{0}"
+# Change visibility of class "AnalyzePlugin" to private
+SearchManager_MarkerVisibility=Change visibility of {0} "{1}" to {2}
+# Use "final" for method "ClassName.myMethod()"
+SearchManager_MarkerFinalMethod=Use "final" for {0} "{1}" - apply carefully!
+# Use "final" for field "ClassName.field"
+SearchManager_MarkerFinalField=Use "final" for  {0} "{1}"
 # class "AnalyzePlugin" has 1 references
 SearchManager_MarkerReference={0} "{1}" has {2} references
 SearchManager_MarkerReferenceFieldNeverRead=Field "{0}" is never read
